salesforce/force-app/main/default/objects/GTM_Usage_Log__c/GTM_Usage_Log__c.object-meta.xml
<CustomObject>
    <description>Tracks GTM site usage events including logins, page views, and user engagement for analytics and monitoring.</description>
    <label>GTM Usage Log</label>
    <nameField>
        <displayFormat>GTM-{000000}</displayFormat>
        <label>Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GTM Usage Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>