salesforce/force-app/main/default/objects/GTM_Usage_Log__c/fields/Event_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Event_Timestamp__c</fullName>
    <description>Precise timestamp of when the event occurred</description>
    <label>Event Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>