salesforce/force-app/main/default/objects/GTM_Usage_Log__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>Type of usage event recorded</description>
    <label>Event Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Login</fullName>
            </value>
            <value>
                <fullName>Page_View</fullName>
                <label>Page View</label>
            </value>
            <value>
                <fullName>Logout</fullName>
            </value>
            <value>
                <fullName>Feature_Use</fullName>
                <label>Feature Use</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>