salesforce/force-app/main/default/objects/GTM_Usage_Log__c/fields/IP_Address__c.field-meta.xml
<CustomField>
    <fullName>IP_Address__c</fullName>
    <description>IP address of the user for geographic insights</description>
    <label>IP Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>