salesforce/force-app/main/default/objects/GTM_Usage_Log__c/fields/Page_Name__c.field-meta.xml
<CustomField>
    <fullName>Page_Name__c</fullName>
    <description>Route path or page name visited (e.g., /gtm, /gtm/dashboard)</description>
    <label>Page Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>