salesforce/force-app/main/default/objects/GTM_Usage_Log__c/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <description>Unique session identifier to group events within a session</description>
    <label>Session ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>