salesforce/force-app/main/default/objects/GTM_Usage_Log__c/fields/User_Agent__c.field-meta.xml
<CustomField>
    <fullName>User_Agent__c</fullName>
    <description>Browser and device information from the request</description>
    <label>User Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>