salesforce/force-app/main/default/objects/GTM_Usage_Log__c/fields/User_Email__c.field-meta.xml
<CustomField>
    <fullName>User_Email__c</fullName>
    <description>Email address of the user who performed the action</description>
    <label>User Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>