salesforce/force-app/main/default/objects/GTM_Usage_Log__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <description>Display name of the user from Okta authentication</description>
    <label>User Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>